--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,10 @@ edition = "2018"
 [dependencies]
 rocket = "0.4.5"
 scraper = "0.12.0"
-diesel = { version = "1.4.4", features = ["postgres"] }
+diesel = { version = "1.4.4", features = ["postgres","chrono"] }
 dotenv = "0.15.0"
 chrono = "0.4.10"
+uuid = { version = "0.8.1", features = ["v4"] } 
+rocket_contrib = "0.4.5"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
