--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ rocket = "0.4.5"
 scraper = "0.12.0"
 diesel = { version = "1.4.4", features = ["postgres","chrono"] }
 dotenv = "0.15.0"
-chrono = "0.4.10"
+chrono = { version = "0.4.10", features = ["serde"] }
 uuid = { version = "0.8.1", features = ["v4"] } 
 rocket_contrib = "0.4.5"
 serde = { version = "1.0", features = ["derive"] }
